# scrum-cards

./: .browserslistrc  .dockerignore  .env.local  .gitattributes  .gitignore  .ocamlformat  Dockerfile  Kraftfile  Makefile  README.md  dune  dune-project  esbuild.config.mjs  eslint.config.mjs  package-lock.json  package.json  scrum-cards.opam  scrum-cards.opam.template  stylelint.config.mjs
.github/workflows/: build-docker.yml  build-unikraft.yml  deploy.yml
deploy/: docker-compose.yml
deploy/docker/: Dockerfile
output/src/client/: App.js  Index.js
output/src/client/bindings/: Bindings_Dom.js  bindings__.js
output/src/client/context/: ConfirmContext.js
output/src/client/context/types/: Context_types.js
output/src/client/css/: Css.js
output/src/client/hooks/: Hooks_ClickAway.js  Hooks_Confirm.js  Hooks_Storage.js  hooks__.js
output/src/client/images/: Icons.js
output/src/client/router/: Router.js
output/src/client/ui/components/: components__BarChart__.js  components__BoardCard__.js  components__Button__.js  components__ConfirmModal__.js  components__HandCard__.js  components__Header__.js  components__Headline__.js  components__InputLabel__.js  components__Input__.js  components__Layout__.js  components__Logo__.js  components__Modal__.js  components__Select__.js  components__Spectator__.js  components__Switch__.js
output/src/client/ui/patterns/: patterns__CreateGameForm__.js  patterns__GameBoard__.js  patterns__JoinGameForm__.js  patterns__PlayGameHeader__.js
output/src/client/ui/screens/: CreateGame.js  JoinGame.js  NotFound.js  Play.js
output/src/shared/api/client/: api_mel.js  shared_api_client.js  shared_api_client__.js
output/src/shared/api/universal/: shared_api_universal__Routes__.js
src/client/: App.re  Index.re  dune
src/client/bindings/: Bindings.re  Bindings_AbortController.re  Bindings_Dom.re  Bindings_Location.re  Bindings_Websocket.re  dune
src/client/context/: ConfirmContext.re  dune
src/client/context/types/: Context_types.ml  dune
src/client/css/: Css.re  colors.css  definitions.css  dune  fonts.css  main.css  utilities.css
src/client/hooks/: Hooks.ml  Hooks_ClickAway.re  Hooks_Confirm.re  Hooks_Storage.re  dune
src/client/images/: Icons.re  dune
src/client/public/: site.webmanifest
src/client/router/: Router.re  dune
src/client/ui/: dune  ui.ml
src/client/ui/components/: dune
src/client/ui/components/BarChart/: BarChart.css  BarChart.re
src/client/ui/components/BoardCard/: BoardCard.css  BoardCard.re
src/client/ui/components/Button/: Button.css  Button.re
src/client/ui/components/ConfirmModal/: ConfirmModal.css  ConfirmModal.re
src/client/ui/components/HandCard/: HandCard.css  HandCard.re
src/client/ui/components/Header/: Header.css  (+1 more)
src/client/ui/patterns/: dune
src/client/ui/screens/: CreateGame.re  JoinGame.re  NotFound.re  Play.re  dune
src/server/: dune  game.ml  player_session.ml  respond.ml  routes.ml  server.ml  session.atd  storage.ml  websocket.ml  websocket_handler.ml
src/shared/api/: dune
src/shared/api/client/: dune  shared_api_client.ml
src/shared/api/server/: dune  shared_api_server.ml
src/shared/api/universal/: dune
(+54 files in other folders)
