(library
 (name server)
 (libraries
  shared_api_server
  core
  mirage-crypto-rng.unix
  cohttp
  cohttp-lwt-unix
  websocket
  websocket-lwt-unix
  websocket-lwt-unix.cohttp
  session-cohttp-lwt
  irmin
  irmin.unix
  irmin-fs
  irmin-fs.unix
  randomconv)
 (preprocess
  (pps ppx_jane ppx_irmin)))

(rule
 (target assets.ml)
 (deps
  (source_tree %{project_root}/public)
  (alias_rec %{project_root}/client))
 (action
  (progn
   (run %{bin:ocaml-crunch} --mode=plain %{project_root}/public -o %{target}))))

(rule
 (alias atd)
 (targets
  session_t.ml
  session_t.mli
  session_b.ml
  session_b.mli
  session_v.ml
  session_v.mli)
 (deps session.atd)
 (action
  (concurrent
   (run atdgen -t %{deps})
   (run atdgen -b %{deps})
   (run atdgen -v %{deps}))))
